--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -14,7 +14,7 @@
       </div>
       <p class="site-description" (click)="redirectToHome()">
         <!-- Front-End Developer (Angular) -->
-         Showcasing Angular Skills
+         Showcasing skills
       </p>
     </div>
   </div>
