--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -56,6 +56,10 @@
                 &.bi-whatsapp {
                     color: #25d366;
                 }
+
+                &:hover {
+                    box-shadow: $light-hover-box-shadow;
+                }
             }
 
         }
