--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,8 +1,9 @@
 <div class="about-page-main" id="about-page-main">
   <div class="page-content-intro-hr">developer & portfolio </div>
 
-  <div class="about-content">
-    <div class="about-container">
+  <div   [@basicStagger] = "{ value: 'in', params: { staggerInterval: myDelayVariable,  duration: 500 } }"  class="about-content">
+
+    <div class="animate-stagger about-container">
       <div class="set-heading">about developer</div>
       <div class="set-container">
         <p>
@@ -14,7 +15,7 @@
       </div>
     </div>
    
-    <div class="about-container">
+    <div class="animate-stagger about-container">
       <div class="set-heading">skills & expertise</div>
       <div class="set-container">
         <p>
@@ -41,7 +42,7 @@
       </div>
     </div>
     
-    <div class="about-container portfolio">
+    <div class="animate-stagger about-container portfolio">
       <div class="set-heading">portfolio</div>
       <div class="set-container">
         <p>
@@ -52,7 +53,7 @@
       </div>
     </div>
 
-     <div class="about-container background">
+     <div class="animate-stagger about-container background">
       <div class="set-heading">Background</div>
       <div class="set-container">
         <p>
