--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,8 +1,9 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
   <div class="page-content-intro-hr">key skills & expertise</div>
 
-  <div class="sets-container">
-    <div class="set-container">
+  <div   [@basicStagger] = "{ value: 'in', params: { staggerInterval: myDelayVariable,  duration: 500 } }"   class="sets-container">
+
+    <div class="animate-stagger set-container">
       <div class="heading">key skills</div>
       <div class="set">
         <span class="skill"><i class="bi bi-code-slash"></i> HTML5</span>
@@ -14,7 +15,7 @@
       </div>
     </div>
 
-    <div class="set-container">
+    <div class="animate-stagger set-container">
       <div class="heading">Expertise</div>
       <div class="set">
         <span class="skill"
@@ -34,7 +35,7 @@
       </div>
     </div>
 
-    <div class="set-container frameworks">
+    <div class="animate-stagger set-container frameworks">
       <div class="heading">frameworks & libs</div>
       <div class="set">
         <span class="skill"><i class="bi bi-box"></i> Angular 16+</span>
@@ -46,7 +47,7 @@
       </div>
     </div>
 
-    <div class="set-container tools">
+    <div class="animate-stagger set-container tools">
       <div class="heading">ide & tools</div>
       <div class="set">
         <span class="skill"><i class="bi bi-app-indicator"></i> VS Code</span>
@@ -61,5 +62,6 @@
         <span class="skill"><i class="bi bi-app-indicator"></i> Git bash</span>
       </div>
     </div>
+
   </div>
 </div>
