cleaned unused animations triggers

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="about-page-main" id="about-page-main">
   <div class="page-content-intro-hr">developer & portfolio </div>
 
-  <div   [@basicStagger] = "{ value: 'in', params: { staggerInterval: myDelayVariable,  duration: 500 } }"  class="about-content">
+  <div @basicStagger  class="about-content">
 
     <div class="animate-stagger about-container">
       <div class="set-heading">about developer</div>
