--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,7 +1,7 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
   <div class="page-content-intro-hr">key skills & expertise</div>
 
-  <div   [@basicStagger] = "{ value: 'in', params: { staggerInterval: myDelayVariable,  duration: 500 } }"   class="sets-container">
+  <div @basicStagger class="sets-container">
 
     <div class="animate-stagger set-container">
       <div class="heading">key skills</div>
