added toggle animations

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -6,7 +6,7 @@
 
     <div @animateFadeIn class="developer-title">Front-End Developer</div>
 
-    <div  @basicStagger class="quick-links">
+    <div  @animateForwardStagger class="quick-links">
       <span
         class="animate-stagger link-item"
         (click)="openHyperLink(gitHubRepo)"
@@ -34,7 +34,7 @@
       </span>
     </div>
 
-    <div @basicStagger class="developer-skills-container">
+    <div @animateReverseStagger class="developer-skills-container">
       <div class="developer-skill animate-stagger">
         <i class="bi bi-check-circle-fill"></i>Responsive UI Design
       </div>
