--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,17 +1,65 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
   <div class="page-content-intro-hr">key skills & expertise</div>
 
-  <div @basicStagger class="sets-container">
-
+  <div @animateForwardStagger class="sets-container">
     <div class="animate-stagger set-container">
       <div class="heading">key skills</div>
       <div class="set">
-        <span class="skill"><i class="bi bi-code-slash"></i> HTML5</span>
-        <span class="skill"><i class="bi bi-code-slash"></i> SCSS</span>
-        <span class="skill"><i class="bi bi-code-slash"></i> Bootstrap 5</span>
-        <span class="skill"><i class="bi bi-code-slash"></i> JavaScript</span>
-        <span class="skill"><i class="bi bi-code-slash"></i> TypeScript</span>
-        <span class="skill"><i class="bi bi-code-slash"></i> Angular 16+</span>
+        <div class="skill">
+          <div class="underlying-bar">
+            <div class="skill-bar html">
+              <span>HTML</span>
+              <span>80%</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div class="underlying-bar">
+            <div class="skill-bar scss">
+              <span>SCSS</span>
+              <span>65%</span>
+            </div>
+          </div>
+        </div>
+
+                <div class="skill">
+          <div class="underlying-bar">
+            <div class="skill-bar js">
+              <span>JavaScript</span>
+              <span>55%</span>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="skill">
+          <div class="underlying-bar">
+            <div class="skill-bar angular">
+              <span>Angular</span>
+              <span>70%</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div class="underlying-bar">
+            <div class="skill-bar RxJs">
+              <span>RxJs</span>
+              <span>50%</span>
+            </div>
+          </div>
+        </div>
+
+         <div class="skill">
+          <div class="underlying-bar">
+            <div class="skill-bar git">
+              <span>GitHub</span>
+              <span>60%</span>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -62,6 +110,5 @@
         <span class="skill"><i class="bi bi-app-indicator"></i> Git bash</span>
       </div>
     </div>
-
   </div>
 </div>
