Fixed the animation issue inside projects list

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -128,8 +128,7 @@
   >
     <div
       *ngFor="let project of projectsList; let i = index"
-      [class]="'project-container prj-' + i"
-      class="animate-stagger"
+      [class]="'project-container animate-stagger prj-' + i"
     >
       <div class="project-image-container">
         <img
