removed project number css

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -128,8 +128,11 @@
   >
     <div
       *ngFor="let project of projectsList; let i = index"
-      [class]="'project-container animate-stagger prj-' + i"
+      class="project-container animate-stagger"
+      
     >
+
+     <!-- [class]="'project-container animate-stagger prj-' + i" -->
       <div class="project-image-container">
         <img
           class="project-img"
