--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -129,7 +129,6 @@
     <div
       *ngFor="let project of projectsList; let i = index"
       class="project-container animate-stagger"
-      
     >
 
      <!-- [class]="'project-container animate-stagger prj-' + i" -->
@@ -139,9 +138,11 @@
           [src]="'./img/projects/' + project.imageName + '.png'"
           alt="featured project"
           (click)="getProject(project.id)"
-          loading="lazy"
+         
         />
       </div>
+
+       <!-- loading="lazy" -->
 
       <div class="project-details-container">
         <div class="project-name">{{ project.name }}</div>
