--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -129,10 +129,10 @@
   >
     <div
       *ngFor="let project of projectsList.reverse(); let i = index"
-      class="project-container animate-stagger"
+      [class]="'project-container animate-stagger'"
     >
  
-      <div class="project-image-container">
+      <div [class]="'project-image-container'">
         <img
           class="project-img"
           [src]="'./img/projects/' + project.imageName + '.png'"
