--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -123,7 +123,7 @@
 
   <div class="page-content-intro-hr">selection</div>
 
-  <section *ngIf="projectsList"
+  <section *ngIf="projectsListLoaded"
     class="featured-projects container"
     @animateForwardStagger
   >
