--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -28,7 +28,7 @@
 
       <span
         class="animate-stagger link-item"
-        (click)="openHyperLink(whatsapp)"
+        (click)="redirectToContactUs()"
       >
         <i class="bi bi-envelope-fill"></i>
       </span>
