fixed data point error

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -53,7 +53,7 @@
       <div @animateFadeIn class="details-container top-right-details">
         <div class="project-description">
           <div class="heading">contributions</div>
-          <div class="details"  [innerHTML]="project?.description" >
+          <div class="details"  [innerHTML]="project.description" >
             <!-- {{ project?.description }} -->
           </div>
         </div>
